--- a/charon/build.gradle
+++ b/charon/build.gradle
@@ -36,12 +36,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    embed 'com.squareup.retrofit2:retrofit:2.3.0'
-    embed 'com.squareup.retrofit2:converter-gson:2.3.0'
-    embed 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
-    embed 'com.google.code.gson:gson:2.7'
-    embed 'io.reactivex:rxjava:1.1.6'
-    embed 'io.reactivex:rxandroid:1.2.1'
+    provided 'com.squareup.retrofit2:retrofit:2.3.0'
+    provided 'com.squareup.retrofit2:converter-gson:2.3.0'
+    provided 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    provided 'com.google.code.gson:gson:2.7'
+    provided 'io.reactivex:rxjava:1.1.6'
+    provided 'io.reactivex:rxandroid:1.2.1'
 }
 
 fatLibraryExt {
